HED-2007 stat cards layout issue

--- a/src/component-library/careers/StatsCards/StatsCards.module.scss
+++ b/src/component-library/careers/StatsCards/StatsCards.module.scss
@@ -40,6 +40,7 @@
 .stats {
   flex: 1;
   display: grid;
+  justify-content: end;
   gap: px-to-rem(16);
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(4, max-content);
@@ -116,23 +117,24 @@
     @include media(screen-l) {
       padding: px-to-rem(32);
       gap: 0;
+      height: 100%;
 
       &:first-of-type {
-        width: px-to-rem(357);
-        height: px-to-rem(290);
+        max-width: px-to-rem(357);
+        max-height: px-to-rem(290);
       }
 
       &:nth-of-type(2) {
-        width: px-to-rem(248);
-        height: px-to-rem(303);
-        justify-self: end;
+        max-width: px-to-rem(248);
+        max-height: px-to-rem(303);
+        justify-self: start;
         grid-row: 1/3;
         grid-column: 2;
       }
 
       &:nth-of-type(3) {
-        width: px-to-rem(248);
-        height: px-to-rem(303);
+        max-width: px-to-rem(248);
+        max-height: px-to-rem(303);
       }
     }
   }
